style.css
* {
  box-sizing: border-box;
}

body {
  font-family: "Montserrat", Arial, sans-serif;
  font-size: 13px;
  line-height: 18px;
  color: #515076;
  background-image: url("images/dandelion.png");
  background-repeat: no-repeat;
  background-size: 790px 697px;
  background-position: 42% 85px;
}

.title {
  font-size: 70px;
  font-weight: 400;
  line-height: 78px;
  padding-top: 220px;
  margin: 110px;
  text-align: center;
}

.product-list {
  list-style: none;
  padding: 0;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  column-gap: 45px;
  row-gap: 30px;
  justify-content: center;
  max-width: 1110px;
  max-height: 1191px;
}

.product-list {
  margin-top: 40px;
  margin-bottom: 30px;
}

.components-list {
  margin-top: 0px;
  padding: 5px;
}
.components-list li {
  margin-bottom: 5px;
  margin-left: 10px;
}

.card {
  background-color: #F8F8F8;
  width: 340px;
  padding: 25px;
  border-radius: 16px;
}

.card-images {
  width: 100%;
  max-width: 290px;
  max-height: 245px;
  display: block;
  background-color: #F0F0F0;
  border-radius: 12px;
}

.label-text {
  text-transform: uppercase;
  font-size: 12px;
  line-height: 24px;
  color: #A5A3B9;
}

.price-row {
  margin-top: 18px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.price-row b.price {
  display: flex;
  align-items: center;
  list-style: none;
  line-height: 24px;
  font-weight: 700;
  font-size: 20px;
}

.price-row span.price {
  font-size: 20px;
  font-weight: 400;
}

